<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BLE测试工具</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">设备列表</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
    <string name="menu_services">刷新服务</string>
    <string name="menu_autoconnect">自动连接</string>
    <string name="RSSI">RSSI</string>
    <string name="menu_about">关于</string>
    <string name="menu_qrcode">二维码扫描下载APP</string>
</resources>