<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xinzhongxinbletester.MainActivity" >

    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_stop"/>
    <item
        android:id="@+id/menu_autoconnect"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_autoconnect"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
   <item
        android:id="@+id/menu_qrcode"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/menu_qrcode"/>

</menu>